--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,12 @@
 body{
     font-family: "Roboto", sans-serif;
 }
-
+.fire-sans{
+    font-family: "Fira Sans", sans-serif;
+}
+h1.fire-sans{
+    text-shadow: -1px 9px 14px rgba(102, 90, 128, 0.507);
+}
 
 /* HTML: <div class="loader"></div> */
 .loader {
@@ -83,7 +88,18 @@ footer{
     border-top: 1px solid #e7e7e7;
 }
 
+.fa-xmark,.fa-chevron-left,.fa-chevron-right{
+    cursor: pointer;
+}
 
+.my-modal .img-container{
+    height: 300px;
+    overflow: hidden;
+}
 .recipe-container {
-    height: 80%;
+    height: 600px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;}
+
+.my-modal ul{
+    max-height: 500px;
 }
